--- a/package.json
+++ b/package.json
@@ -4,18 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "start": "concurrently \"cd backend && nodemon server.js\" \"cd frontend && npm start\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "concurrently": "^4.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "mongoose": "^5.4.4",
-    "socket.io": "^2.2.0"
+    "concurrently": "^4.1.0"
   }
 }
