--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "md5": "^2.2.1",
     "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-scroll": "^1.7.10",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
     "socket.io-client": "^2.2.0",
