--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "start": "concurrently \"nodemon server.js\" \"cd frontend && npm start\""
   },
   "keywords": [],
   "author": "",
